tests/snapshots/raw__examples_in_informal_reference-85.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(r###\"br\"foo\"\"###)"
---
Ok(
    [
        Token {
            class: raw_byte_string,
            length: 7,
        },
    ],
)
