tests/snapshots/raw__examples_in_informal_reference-88.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(r###\"b\"foo #\\\"# bar\"\"###)"
---
Ok(
    [
        Token {
            class: byte_string,
            length: 15,
        },
    ],
)
