tests/snapshots/raw__examples_in_informal_reference-9.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"false\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 5,
        },
    ],
)
