tests/snapshots/raw__examples_in_informal_reference-91.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(r###\"b\"R\"\"###)"
---
Ok(
    [
        Token {
            class: byte_string,
            length: 4,
        },
    ],
)
