tests/snapshots/raw__examples_in_informal_reference-93.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(r###\"b\"\\\\x52\"\"###)"
---
Ok(
    [
        Token {
            class: byte_string,
            length: 8,
        },
    ],
)
