tests/snapshots/raw__examples_in_informal_reference-94.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(r###\"br\"\\x52\"\"###)"
---
Ok(
    [
        Token {
            class: raw_byte_string,
            length: 8,
        },
    ],
)
